<resources>
    <string name="app_name">WakeMeUp</string>
    <string name="main_btn_set">Set/State</string>
    <string name="main_btn_exit">Exit</string>
    <string name="main_info_1">This is a simple timer:\nit plays a melody
        after\na specified time interval\n(hours/minutes).</string>
    <string name="main_info_2">You can also set it to trigger at a specific Date/Time.</string>
    <string name="main_info_3">Note! This is not an Alarm Clock that signals until you turn it
        off. This app plays one short melody and does not wait for any response from you.</string>
    <string name="main_info_4">Press "Set/State" to start..</string>
    <string name="service_info">This service is used by WakeMeUp; it usually runs 5..20sec</string>
    <string name="action_settings">Settings</string>
    <string name="time_setting_info">Max time interval is 100 hours.\nIn case of
        SYSTEM REBOOT (it also happens when your device is switched OFF/ON) timer
        settings ARE LOST!</string>
    <string name="set_timer">Set Timer</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_start">Start</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_return">Return</string>
    <string name="btn_play">Try</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_set">Set</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Return</string>
    <string name="btn_set_date">Set date</string>
    <string name="btn_set_time">Set time</string>
    <string name="timer_current_state">Currently set signals:</string>
    <string name="timer_signal">Sound:</string>
    <string name="timer_time">Time:</string>
    <string name="timer_at">At:</string>
    <string name="msg_none">None</string>
    <string name="timer_info_1">If the following time options are not
        enough, click the time value above and set whatever you want.</string>
    <string name="sound_select_signal">Select signal</string>
    <string name="sound_default_signal">bell.mp3</string>
    <string name="header_non_std_time">Non-Standard Time Interval</string>
    <string name="header_date_time">Date/time to trigger at</string>
    <string name="trigger_at">Trigger At:</string>
    <string name="msg_bad_datetime">Sorry, this time belongs to the past.
        We cannot go there - no Time Machine!</string>
</resources>