<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.6"
        android:src="@drawable/sweet_dreams" />

    <TextView
        android:id="@+id/app_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_info_1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/app_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/main_info_2"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/app_info1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/app_info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/main_info_3"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/app_info2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/app_info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="40dp"
        android:text="@string/main_info_4"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/app_info3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_set_stat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="2dp"
        android:padding="24dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/main_btn_set"
        android:onClick="buttonClicked"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_exit"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="10dp"
        android:padding="24dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/main_btn_exit"
        android:onClick="buttonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_set_stat"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    -->

</androidx.constraintlayout.widget.ConstraintLayout>