<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".SetTimerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <TextView
        android:id="@+id/label_set_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:text="@string/set_timer"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_timer_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="0dp"
        android:textAlignment="textStart"
        android:padding="10sp"
        android:textSize="16sp"
        android:singleLine="true"
        android:text="@string/timer_current_state"
        app:layout_constraintTop_toBottomOf="@id/label_set_timer"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/signals"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="2dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/label_timer_state" />

    <TextView
        android:id="@+id/label_timer_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="0dp"
        android:padding="5sp"
        android:textSize="16sp"
        android:textAlignment="textEnd"
        android:text="@string/timer_time"
        app:layout_constraintTop_toBottomOf="@id/signals"
        app:layout_constraintRight_toLeftOf="@id/guideline1" />

    <TextView
        android:id="@+id/timer_current_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:textSize="16sp"
        android:singleLine="true"
        android:textColor="@color/color_accent"
        android:text="5 min"
        android:onClick="buttonClicked"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintTop_toBottomOf="@id/signals"
        app:layout_constraintLeft_toRightOf="@id/guideline1" />

    <TextView
        android:id="@+id/label_timer_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="textStart"
        android:padding="5sp"
        android:textSize="16sp"
        android:singleLine="true"
        android:text="@string/timer_signal"
        app:layout_constraintTop_toBottomOf="@id/label_timer_choice"
        app:layout_constraintRight_toLeftOf="@id/guideline1" />

    <TextView
        android:id="@+id/timer_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="5sp"
        android:textSize="16sp"
        android:textColor="@color/color_accent"
        android:text="@string/msg_none"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:onClick="buttonClicked"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintTop_toBottomOf="@id/timer_current_choice"
        app:layout_constraintLeft_toRightOf="@id/guideline1" />

    <TextView
        android:id="@+id/time_setting_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/timer_info_1"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/label_timer_sound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/timer_items_list"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/time_setting_info" />

    <Button
        android:id="@+id/btn_timer_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="18dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/btn_set"
        android:onClick="buttonClicked"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_timer_return" />

    <Button
        android:id="@+id/btn_timer_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="18dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/btn_return"
        android:onClick="buttonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_timer_start"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>