<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".SelectSoundActivity">

    <TextView
        android:id="@+id/label_select_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:text="@string/sound_select_signal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/label_current_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:paddingRight="4sp"
        android:textSize="16sp"
        android:text="Current choice:"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/label_select_signal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/current_choice" />

    <TextView
        android:id="@+id/current_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:padding="10sp"
        android:paddingLeft="4sp"
        android:textSize="16sp"
        android:text="@string/sound_default_signal"
        android:textColor="@color/color_accent"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/label_select_signal"
        app:layout_constraintStart_toEndOf="@id/label_current_choice"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/items_list"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/label_current_choice" />


    <Button
        android:id="@+id/btn_sound_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="18dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/btn_set"
        android:onClick="buttonClicked"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_play" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="18dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/btn_play"
        android:onClick="buttonClicked"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_sound_ok"
        app:layout_constraintEnd_toStartOf="@id/btn_sound_cancel" />

    <Button
        android:id="@+id/btn_sound_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="18dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/btn_cancel"
        android:onClick="buttonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_play"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>